objects/Texas_Franchise_Worksheet__c.object
<CustomObject>
    <description>Used to report on and store information regarding the Texas Franchise Worksheet</description>
    <fields>
        <fullName>Business_Address__c</fullName>
        <label>Business Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Texas Franchise Worksheets</relationshipLabel>
        <relationshipName>Texas_Franchise_Worksheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Director_1__c</fullName>
        <label>Director 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_2__c</fullName>
        <label>Director 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_3__c</fullName>
        <label>Director 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Details__c</fullName>
        <formula>&quot;Entity Created on: &quot; +  TEXT(Entity__r.DateCreated__c) + BR() +
&quot;Entity Last Modified By: &quot; +  Entity__r.LastModifiedBy.FirstName + &quot; &quot; + Entity__r.LastModifiedBy.LastName + &quot; &quot; + TEXT(DATEVALUE(Entity__r.LastModifiedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Id__c</fullName>
        <formula>Entity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <label>Entity Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Texas Franchise Worksheets</relationshipLabel>
        <relationshipName>Texas_Franchise_Worksheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>General_Partner__c</fullName>
        <label>General Partner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limited_Partner_1__c</fullName>
        <label>Limited Partner 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limited_Partner_2__c</fullName>
        <label>Limited Partner 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_1__c</fullName>
        <label>Manager 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_2__c</fullName>
        <label>Manager 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_3__c</fullName>
        <label>Manager 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_1__c</fullName>
        <label>Member 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_2__c</fullName>
        <label>Member 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_3__c</fullName>
        <label>Member 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>President__c</fullName>
        <label>President</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Client__c</fullName>
        <label>Primary Client</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOS_File_Number__c</fullName>
        <formula>Entity__r.SOS_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOS File Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOS_Filing_Number__c</fullName>
        <label>SOS File Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Id__c</fullName>
        <formula>Sale__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sale</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Texas Franchise Worksheets</relationshipLabel>
        <relationshipName>Texas_Franchise_Worksheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secretary__c</fullName>
        <label>Secretary</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Texas_Tax_Payer_Id_Number__c</fullName>
        <label>Texas Tax Payer Id Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Texas_Webfile__c</fullName>
        <label>Texas Webfile</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <label>Total Revenue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treasurer__c</fullName>
        <label>Treasurer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vice_President__c</fullName>
        <label>Vice President</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Texas Franchise Worksheet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Nolan_Daigle_Texas_Franchise_Worksheet</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Texas Franchise Worksheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Texas Franchise Worksheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>